# nepali_number_to_word

./: .gitignore  README.md  pyproject.toml  test.py
nepali_number_to_word/: __init__.py  converter.py
tests/: test_converter.py
