[project]
name = "nepali-number-to-word"
version = "0.1.0"
description = "A Python package to convert numbers to Nepali words"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
