[project]
name = "nepali-number-to-word"
version = "0.1.0"
description = "A Python package to convert numbers to Nepali words"
readme = "README.md"
authors = [
    {name = "Manisha Bhandari"},
]
dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]
requires-python = ">=3.8"
license = {text = "MIT"}

project_urls = {
    "Bug Tracker" = "https://github.com/manisha841/nepali_number_to_word/issues",
    "Source Code" = "https://github.com/manisha841/nepali_number_to_word",
}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
